--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <head>
 	<script src="lib/d3_v4.js"></script>
 	<script src="lib/crossfilter.min.js"></script>
+	<script src="lib/queue.js"></script>
 </head>
 
 <h2>Test page</h2>
+<div id="viz"></div>
+
+<script src="eda.js"></script>
 
 </html>
