added variable selector

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="lib/queue.js"></script>
 </head>
 
-<h2>Test page</h2>
+<h2>seda test page</h2>
 <div id="viz"></div>
 
 <script src="seda.js"></script>
